# TriggerForge

./: .coverage  .gitignore  404.html  LICENSE  README.md  config.sample.yaml  config.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tmp_inspect_mkdocs_plugin.py
.github/workflows/: ci.yml
CI/: run_linter.sh
docs/: index.md
docs/en/: CONTRIBUTING.md  architecture.md  charter.md  configuration.md  deployment.md  dev_plan_v1.2.md  index.md  migration_v1.2.md  plugin_dev.md  setup.md
docs/legal/: CONTRIBUTING.md
docs/zh/: CONTRIBUTING.md  architecture.md  charter.md  configuration.md  deployment.md  dev_plan_v1.2.md  index.md  migration_v1.2.md  plugin_dev.md  setup.md
en/: index.html
en/architecture/: index.html
en/charter/: index.html
en/configuration/: index.html
en/deployment/: index.html
en/dev_plan_v1.2/: index.html
en/migration_v1.2/: index.html
en/plugin_dev/: index.html
en/setup/: index.html
legal/CLA/: index.html
legal/CONTRIBUTING/: index.html
search/: search_index.json
src/: requirements.txt
src/triggerforge/: __init__.py  __main__.py  cli.py  main.py
src/triggerforge/core/: __init__.py  looper.py  schema.py
src/triggerforge/core/clerk/: __init__.py  archiver.py  journal.py
src/triggerforge/core/runner/: plugin_runner.py
src/triggerforge/core/sentry/: __init__.py  filter.py  queue.py  watcher.py
src/triggerforge/plugins/: base.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_cli.py  test_pipeline.py  test_plugin_runner.py
tests/unit/: __init__.py  conftest.py  test_archiver.py  test_filter.py  test_looper.py  test_main.py  test_queue.py  test_schema.py  test_watcher.py
triggerforge/: __init__.py
zh/: index.html
zh/architecture/: index.html
zh/charter/: index.html
zh/configuration/: index.html
zh/deployment/: index.html
zh/dev_plan_v1.2/: index.html
zh/en/: index.html
zh/en/architecture/: index.html
zh/en/charter/: index.html
zh/en/configuration/: index.html
zh/en/deployment/: index.html
zh/en/dev_plan_v1.2/: index.html
zh/en/migration_v1.2/: index.html
zh/en/plugin_dev/: index.html
zh/en/setup/: index.html
zh/legal/CLA/: index.html
zh/legal/CONTRIBUTING/: index.html
zh/migration_v1.2/: index.html
zh/plugin_dev/: index.html
zh/setup/: index.html
zh/zh/: index.html
zh/zh/architecture/: index.html
zh/zh/charter/: index.html
zh/zh/configuration/: index.html
zh/zh/deployment/: index.html
zh/zh/dev_plan_v1.2/: index.html
zh/zh/migration_v1.2/: index.html
zh/zh/plugin_dev/: index.html
zh/zh/setup/: index.html
