[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "triggerforge"
dynamic = ["version"]
description = "A high-performance directory monitor and dynamic plugin execution engine."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["file-watcher", "plugin-engine", "scheduler", "automation"]
authors = [
    { name = "zybcode" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: System :: Monitoring",
]

# 核心运行时依赖 - 确保包含 pydantic 以修复 ValidationError 问题
dependencies = [
    "watchdog>=4.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

# 命令行工具全局入口注册
[project.scripts]
triggerforge = "triggerforge.main:main"

# Hatch 构建与版本管理配置
[tool.hatch.version]
path = "src/triggerforge/__init__.py"
pattern = "^__version__\\s*=\\s*[\"'](?P<version>[^\"']+)[\"']"

[tool.hatch.build.targets.wheel]
packages = ["src/triggerforge"]

# Hatch 开发与测试环境管理 - 包含了 pytest 和 pytest-cov[cite: 4]
[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "pydantic>=2.0.0",
    "black",
    "mypy",
    "ruff",                
    "types-PyYAML",       
    "ipython",             
    "mkdocs",
    "mkdocs-material",
    "mkdocs-static-i18n",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
cov = "pytest --cov=src/triggerforge --cov-report=term-missing {args:tests}"
format = "black src tests"
lint = [
    "black --check src tests",
    "ruff check src tests",
    "mypy src"
]
docs-serve = "mkdocs serve"

# Pytest 配置：确保 src 目录可以被正确识别，解决导入错误[cite: 4]
[tool.pytest.ini_options]
pythonpath = ["src"]
cache_dir = "tmp/.pytest_cache"

# Black 代码格式化配置
[tool.black]
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.venv
  | config\.yaml
  | README\.md
  | docs
)/
'''